--- a/integrations/cdn(components-sdk)/dropin.html
+++ b/integrations/cdn(components-sdk)/dropin.html
@@ -57,7 +57,7 @@
         const domElement = dropIn.mount('dropIn'); // This 'dropIn' id MUST MATCH the id on your empty container created in Step 3
 
         // STEP #6: Add an event listener to handle events when the element is mounted
-        domElement.addEventListener('onReady', (event) => {
+        dropIn.on('ready', (event) => {
           /*
              ... Handle event
            */
@@ -67,7 +67,7 @@
         });
 
         // STEP #7: Add an event listener to handle events when the payment is successful.
-        domElement.addEventListener('onSuccess', (event) => {
+        dropIn.on('success', (event) => {
           /*
              ... Handle event on success
            */
@@ -76,7 +76,7 @@
         });
 
         // STEP #8: Add an event listener to handle events when the payment has failed.
-        domElement.addEventListener('onError', (event) => {
+        dropIn.on('error', (event) => {
           /*
              ... Handle event on error
            */
