--- a/integrations/cdn(components-sdk)/full-featured-card.html
+++ b/integrations/cdn(components-sdk)/full-featured-card.html
@@ -57,7 +57,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
         // STEP #5: Mount 'fullFeaturedCard' element
         const domElement = element.mount('full-featured-card'); // This 'full-featured-card' id MUST MATCH the id on your empty container created in Step 3
         // STEP #6: Add an event listener to handle events when the element is mounted
-        domElement.addEventListener('onReady', (event) => {
+        element.on('ready', (event) => {
           /**
            * ... Handle event when element is mounted
            */
@@ -67,7 +67,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
         });
 
         // STEP #7: Add an event listener to handle events when the payment is successful.
-        domElement.addEventListener('onSuccess', (event) => {
+        element.on('success', (event) => {
           /*
             ... Handle event on success
           */
@@ -76,7 +76,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
         });
 
         // STEP #8: Add an event listener to handle events when the payment has failed.
-        domElement.addEventListener('onError', (event) => {
+        element.on('error', (event) => {
           /*
             ... Handle event on error
           */
