--- a/integrations/cdn(components-sdk)/googlepay.html
+++ b/integrations/cdn(components-sdk)/googlepay.html
@@ -65,7 +65,7 @@
         // STEP #5: Mount googlepay element
         const domElement = googlepay.mount('googlepay');
         // STEP #6: Add an event listener to handle errors
-        domElement.addEventListener('onError', (event) => {
+        googlepay.on('error', (event) => {
           const { error } = event.detail;
           document.getElementById('error').style.display = 'block'; // Example: show error
           document.getElementById('error').innerHTML = error.message; // Example: set error message
@@ -74,7 +74,7 @@
 
 
         // STEP #7: Add an event listener to handle errors
-        domElement.addEventListener('onSuccess', (event) => {
+        googlepay.on('success', (event) => {
           // handle your success event
         });
       } catch (error) {
