fix: [ACE-310] remove airwallex-payment-elements and replace with @airwallex/components-sdk

--- a/integrations/cdn/split-card-consent.html
+++ b/integrations/cdn/split-card-consent.html
@@ -2,7 +2,8 @@
 split-card.html
 Airwallex Payment Demo - Static HTML.  Created by Charlie Lang and Josie Ku.
 
-airwallex-payment-elements Split Card element integration in Static HTML
+@airwallex/components-sdk
+ Split Card element integration in Static HTML
 Comments with "Example" demonstrate how states can be integrated
 with the element, they can be removed.
 
@@ -17,7 +18,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Airwallex Checkout Playground</title>
   <!-- 
-        STEP #1: Import airwallex-payment-elements bundle 
+        STEP #1: Import components sdk bundle 
                   - You MUST replace the bundle version to the latest NPM version
                     in order to import the package properly!
       -->
