feat: [PACST-6601] change first2 to firstTwo

--- a/integrations/cdn/index.html
+++ b/integrations/cdn/index.html
@@ -35,7 +35,7 @@
       <a href="/3dsForNativeApi.html" class="demo-button">3DS For Native API</a>
       <a href="/googlepay.html" class="demo-button">Google Pay</a>
       <a href="/applepay.html" class="demo-button">Apple Pay</a>
-      <a href="/kr-split-card.html" class="demo-button">KR Card Split Element</a>
+      <a href="/kr-split-card.html" class="demo-button">KR Local Card Split Element</a>
     </nav>
 
     <section class="tips">
