feat: [PACST-6601] modify doc name and doc link

--- a/integrations/cdn/kr-split-card.html
+++ b/integrations/cdn/kr-split-card.html
@@ -2,7 +2,7 @@
   kr-split-card.html
   Airwallex Payment Demo - Static HTML.  Created by Yushi Wang.
 
-  @airwallex/components-sdk Korean CardSplit element integration in Static HTML
+  @airwallex/components-sdk Korean Local Card - Split Card element integration in Static HTML
   Comments with "Example" demonstrate how states can be integrated
   with the element, they can be removed.
  -->
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Airwallex Checkout Playground - Korean Card Split Element</title>
+    <title>Airwallex Checkout Playground - Korean Local Card - Split Card Element</title>
     <!-- 
            STEP #1: Import @airwallex/components-sdk bundle 
                      - You MUST replace the bundle version to the latest NPM version
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <h1>Korean Card Split Element integration</h1>
+    <h1>Korean Local Card - Split Card Element integration</h1>
     <!-- Example: loading state when element is not yet mounted -->
     <p id="loading">Loading...</p>
     <!-- Example: Hide all elements before they are all mounted -->
